Handle compressed textures allocated via TexStorage2D.

Compressed internal formats should be allowed as arguments to
TexStorage2D. Textures allocated in this way are also cleared lazily,
either just before the first CompressedTexSubImage2D if it does not
cover the entire mipmap level, or if they're sampled.

https://github.com/KhronosGroup/WebGL/pull/1641 expands the
webgl-compressed-texture-s3tc.html conformance test to cover this
behavior.

BUG=605129
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel;tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/1925093002
Cr-Commit-Position: refs/heads/master@{#391139}

Former-commit-id: 5e216d9b62275101c30f4a5cb2174bb68970ef3c